--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
   <div class="apps">
     <a href="POSMOVIL/index.html">🔎 POS MOVIL</a>
   </div>
-  
+  <div class="apps">
+    <a href="POSMOVIL/cortes_pendientes.html">🔎 Usuarios con Corte Pendiente</a>
+  </div>
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
